--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,5 @@
+<% provide(:title, 'Home') %>
 <h1>Sample App</h1>
 <p>
-  This is the home page for the <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> sample application. 
+  This is the home page for the <a href="http://railstutorial.org/">Ruby on railstutorialls Tutorial</a> sample application. 
 </p>
-<!-- 
-  Find me in app/views/static_pages/home.html.erb</p> -->
